Refine: add margin to fix-card component for improved spacing

--- a/src/issueModal/sass/issue-modal.scss
+++ b/src/issueModal/sass/issue-modal.scss
@@ -410,5 +410,11 @@
 				}
 			}
 		}
+
+		.edac-fix-card {
+			&:not(:last-child) {
+				margin-bottom: 24px;
+			}
+		}
 	}
 }
